--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
             </resource>
         </resources>
         <!--防止ieda加载不到xml或者properties文件结束-->
+
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
